--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
+    "@types/node": "^14.0.11",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.5.0",
     "prettier": "2.0.5",
     "react-bootstrap": "^1.0.1"
