--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.5.0",
+    "gatsby-transformer-json": "^2.4.5",
     "prettier": "2.0.5",
     "react-bootstrap": "^1.0.1"
   },
