--- a/package.json
+++ b/package.json
@@ -5,27 +5,29 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.21.37",
-    "gatsby-image": "^2.4.4",
-    "gatsby-plugin-manifest": "^2.4.5",
-    "gatsby-plugin-offline": "^3.2.3",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sharp": "^2.6.4",
-    "gatsby-source-filesystem": "^2.3.4",
-    "gatsby-transformer-sharp": "^2.5.2",
+    "gatsby": "^2.23.3",
+    "gatsby-image": "^2.4.7",
+    "gatsby-plugin-manifest": "^2.4.11",
+    "gatsby-plugin-offline": "^3.2.9",
+    "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-sharp": "^2.5.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.11",
-    "@types/react": "^16.9.35",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.0.0",
     "bootstrap": "^4.5.0",
     "gatsby-transformer-json": "^2.4.5",
     "prettier": "2.0.5",
-    "react-bootstrap": "^1.0.1"
+    "react-bootstrap": "^1.0.1",
+    "uuid": "^8.1.0"
   },
   "keywords": [
     "gatsby"
