--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.3",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "@types/uuid": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "core-js": "^3.6.5",
     "gatsby-transformer-json": "^2.4.5",
     "prettier": "2.0.5",
     "react-bootstrap": "^1.0.1",
