--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/core-js": "^2.5.3",
+    "@types/json2csv": "^5.0.1",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
@@ -27,6 +28,7 @@
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
     "gatsby-transformer-json": "^2.4.5",
+    "json2csv": "^5.0.1",
     "prettier": "2.0.5",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-icons": "^1.0.3-alpha4",
